# provaBLEwahoo

./: CMakeLists.txt  MovingAverage.cpp  MovingAverage.h  main.cpp  wahooPedals.cpp  wahooPedals.h
